@@ -1,5 +1,11 @@
 2024-06-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCgenconstprop.cc,
+	  src/SDCCdflow.h:
+	  Fix a z80 codegen issue in the handling of information from generalized constant propagation.
+
+2024-06-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/z80/gen.c,
 	  support/regression/tests/bug-3740.c:
 	  Fix bug #3740.
